...
                        ProgressView("Loading more")
                    }
                }
            }
        }
        
        .navigationTitle("People")
        .toolbar {
            ToolbarItem {
                createButton
            }
        }
        .sheet(isPresented: $showCreateView, content: {
            CreateView {
                withAnimation(.spring().delay(0.3)) {
                    showSuccess.toggle()
...
